@@ -1,3 +1,9 @@
+2015-10-19  Even Rouault <even.rouault at spatialys.com>
+
+	* libtiff/tiffiop.h, libtiff/tif_dirwrite.c: suffix constants by U to fix 
+	'warning: negative integer implicitly converted to unsigned type' warning
+	(part of -Wconversion)
+
 2015-10-17  Even Rouault <even.rouault at spatialys.com>
 
 	* libtiff/tif_dir.c, libtiff/tif_dirread.c, libtiff/tif_getimage.c,
